--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
   </head>
   
   <body>
+    <!-- ! DELETE img LATER -->
+    <img src="/dos-and-donts/assets/question1-do-U-nyu8X_.webp" alt="Test" loading='lazy' /> 
     <div id="root"></div>
-    
+      
     <!-- jQuery library and jQuery sparkle plugin -->
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <!-- <script src="src/assets/kor_animations/modified-sparkles.js"></script> -->
