--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     <!-- jQuery library and jQuery sparkle plugin -->
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <!-- <script src="src/assets/kor_animations/modified-sparkles.js"></script> -->
-    <script src="/dos-and-donts/src/assets/kor_animations/modified-sparkles.js"></script>
+    <script src="./src/assets/kor_animations/modified-sparkles.js"></script>
   </body>
 </html>
